# grafana

./: .gitignore  README.md  docker-compose.yaml  grafana.ini  pyproject.toml
.github/workflows/: deploy.yml  get_aws_access.py  validation.yml
grafana/dashboards/: Cloud Watch.json  init.json  teste.json
infra/: grafana.yaml
